# platforms

./: AUTHORS  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  utils.bzl  version.bzl
.bazelci/: presubmit.yml
abi/: BUILD
cpu/: BUILD
cpu/armv8-m/: BUILD
cpu/armv8-m/extensions/: BUILD
cpu/riscv/extensions/: BUILD  shorthand.bzl
distro/: README.md  makerel.sh  releasing.md
experimental/platform_data/: BUILD  defs.bzl
host/: BUILD.bazel  constraints.bzl  extension.bzl  host_platform.bzl
os/: BUILD
platform_data/: BUILD.bazel  defs.bzl
tests/: BUILD  host_constraints_test.sh
tests/host/: BUILD
