# Host platform detection

load("@host_platform//:constraints.bzl", "HOST_CONSTRAINTS")

package(default_visibility = ["//visibility:public"])

exports_files(["constraints.bzl", "extension.bzl"])

filegroup(
    name = "srcs",
    srcs = glob(["**"]) + [
        # Include the generated code so that users can build docs with stardoc
        "@host_platform//:constraints.bzl",
    ],
)

platform(
    name = "host",
    constraint_values = HOST_CONSTRAINTS,
)
